# persian_music_abstraction

./: .gitignore  README.md  daramad-mahur.html  maayeh-spec.md  pyproject.toml
.github/workflows/: deploy.yml
data/: sources.json
data/maayehs/: chahargah-chahargah-baste-negar-2.maayeh  chahargah-chahargah-baste-negar.maayeh  chahargah-chahargah-chaharmezrab-e-hesar.maayeh  chahargah-chahargah-daramad-1.maayeh  chahargah-chahargah-daramad-2.maayeh  chahargah-chahargah-daramad-3.maayeh  chahargah-chahargah-daramad-4.maayeh  chahargah-chahargah-forud.maayeh  chahargah-chahargah-haji-hasani.maayeh  chahargah-chahargah-hazin.maayeh  chahargah-chahargah-hesar-2.maayeh  chahargah-chahargah-hesar-3.maayeh  chahargah-chahargah-hesar-4.maayeh  chahargah-chahargah-hesar.maayeh  chahargah-chahargah-hodi.maayeh  chahargah-chahargah-kereshme-with-muye.maayeh  chahargah-chahargah-kereshme.maayeh  chahargah-chahargah-lezgi.maayeh  chahargah-chahargah-maghlub.maayeh  chahargah-chahargah-mansuri-2.maayeh  chahargah-chahargah-mansuri-3.maayeh  chahargah-chahargah-mansuri.maayeh  chahargah-chahargah-matn-and-hashiye.maayeh  chahargah-chahargah-mokhalef.maayeh  chahargah-chahargah-muye-2.maayeh  chahargah-chahargah-muye.maayeh  chahargah-chahargah-naghme-2.maayeh  dadgah-mahur.maayeh  (+238 more)
plans/: 2026-04-08-implementation-plan.md
schema/: maayeh.schema.json
scripts/: convert_radif.py  extract_midi_pitches.py  fix_ist_shahed.py
tests/: test_analysis.py  test_core.py  test_export.py  test_parser.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+41 files in other folders)
